--- a/trunk/vowel_reordering/README
+++ b/trunk/vowel_reordering/README
@@ -1,3 +1,5 @@
+reorder_ml.py
+-------------
 This is a sample code for reordering of vowels.
 This handles the postbase and prebase vowel problems and helps in reducing the number of training classes. 
 Soon an implementation in c++ will be released, which can be used for all languages.
@@ -11,3 +13,14 @@ python reorder.py <input filename> <output filename>
 This should improve the accuracy of current Malayalam Module by around 10%.
 
 Jinesh K J
+
+
+reorder_ban.py
+--------------
+
+This is a hack of the code written by Jinesh. This is meant for Bengali script.
+
+Usage:
+------
+
+python reorder.py <input filename> <output filename>
