--- a/dict/.deps/trie.Po
+++ b/dict/.deps/trie.Po
@@ -28,7 +28,8 @@ trie.o: trie.cpp trie.h dawg.h /usr/include/ctype.h \
  ../ccutil/serialis.h ../ccutil/memry.h ../ccutil/errcode.h \
  ../ccutil/fileerr.h ../ccutil/lsterr.h ../ccutil/strngs.h \
  ../cutil/callcpp.h ../ccutil/varable.h ../ccutil/unichar.h \
- /usr/include/memory.h /usr/include/assert.h
+ /usr/include/memory.h /usr/include/assert.h /usr/include/bits/wchar.h \
+ /usr/include/bits/wchar2.h
 
 trie.h:
 
@@ -165,3 +166,7 @@ dawg.h:
 /usr/include/memory.h:
 
 /usr/include/assert.h:
+
+/usr/include/bits/wchar.h:
+
+/usr/include/bits/wchar2.h:
